--- a/owner/templates/owner_list.html
+++ b/owner/templates/owner_list.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <p>¡¡Hola Pythonista, el App Owner está funcionando correctamente!!</p>
-    <h1>Nombre de Catalog: {{ data.nombre }}</h1>
-    <h1>Edad de Catalog: {{ data.edad }}</h1>
-    <h1>País de Catalog: {{ data.pais }}</h1>
+    <h1>Nombre: {{ data.nombre }}</h1>
+    <h1>Edad: {{ data.edad }}</h1>
+    <h1>País: {{ data.pais }}</h1>
 
     {% if data.edad >= 18 %}
         <p>{{ data.nombre }} es mayor de edad.</p>
